fix: update mutation button text color for improved readability in light mode

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ textarea.category-input {
 
 #mutation-buttons button span,
 #mutation-buttons button p {
-    color: #eaeaea;
+    color: #121212;
 }
 
 #standard-popup-content, #mutation-content {
